--- a/notebooks/modeling.ipynb
+++ b/notebooks/modeling.ipynb
@@ -74,10 +74,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfRowCountStart = len(df.index)\n",
+    "dfRowCountStart"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The dataset contains a mix of numerical and categorical variables representing various attributes of loan applicants and their loan applications. The dataset appears to be suitable for analyzing factors influencing ...\n"
+    "The dataset contains a mix of numerical and categorical variables representing various attributes of loan applicants and their loan applications. The dataset appears to be suitable for analyzing factors influencing the sales price of a item compared to the retail price the views that they had for different items and categories.\n"
    ]
   },
   {
@@ -91,6 +110,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "- The dataset contains ... entries (rows) and ... columns.\n",
+    "- Each column represents a different variable or feature.\n",
+    "- The variables have different data types:\n",
+    "- ... columns are of type float64, representing numerical variables (e.g., CoapplicantIncome, LoanAmount).\n",
+    "- ... column is of type int64, representing a numerical variable (e.g., ApplicantIncome).\n",
+    "- ... columns are of type object, representing categorical variables (e.g., Gender, Married, Education).\n",
+    "- ... are missing values in several columns:\n",
+    "Gender, Married, Dependents, Self_Employed, LoanAmount, Loan_Amount_Term, and Credit_History have some missing values.\n",
+    "- The target variable (Loan_Status) is categorical and has two classes: Y (Yes) and N (No).\n",
+    "- Other categorical variables include Gender, Married, Education, Self_Employed, and Property_Area.\n",
+    "- Numerical variables include ApplicantIncome, CoapplicantIncome, LoanAmount, Loan_Amount_Term, and Credit_History."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Identifying potential data issues and limitations.\n",
+    "from skimpy import skim\n",
+    "skim(df)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -98,10 +147,84 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For Visualization\n",
+    "import matplotlib.pyplot as plt\n",
+    "import plotly.express as px\n",
+    "import seaborn as sn\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('../data/sales.csv')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.tail()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     " \ti. Perform Univariate Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    df['price_retail']\n",
+    "          .astype('')\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import plotly.express as px\n",
+    "\n",
+    "# Assuming df is your DataFrame containing the 'price_retail' column\n",
+    "labels = (df['price_retail']\n",
+    "          .astype('')\n",
+    "\n",
+    "# Rename columns for clarity\n",
+    "labels.columns = ['price_retail', 'Count']\n",
+    "\n",
+    "# Create figure using Plotly\n",
+    "fig = px.bar(\n",
+    "    data_frame=labels, \n",
+    "    x='price_retail', \n",
+    "    y='Count', \n",
+    "    title='Class Imbalance', \n",
+    "    color='price_retail'\n",
+    ")\n",
+    "\n",
+    "# Add titles & Display figure\n",
+    "fig.update_layout(xaxis_title='Sales price', yaxis_title='Sales made')\n",
+    "fig.show()"
    ]
   },
   {
@@ -115,7 +238,107 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Numeric Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.select_dtypes('').nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this will change depending on the awnser above\n",
+    "# Select features to plot\n",
+    "plot_cols = ['sales', 'views', 'price_cost','price_cost']\n",
+    "\n",
+    "# Plot numeric features against target\n",
+    "plt.Figure(figsize=(3,4))\n",
+    "for col in plot_cols:\n",
+    "    fig = px.box(data_frame=df[plot_cols], x=col, color=df['price_retail'], title=f'BoxPlot for {col} Feature against the Target')\n",
+    "    fig.update_layout(xaxis_title=f'{col} Feature')\n",
+    "    fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Categorical Feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.select_dtypes('object').nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this will change depending on the awnser above\n",
+    "# Select features to plot\n",
+    "plot_cols = ['category_id', 'id']\n",
+    "\n",
+    "# Plot numeric features against target\n",
+    "plt.Figure(figsize=(3,4))\n",
+    "for col in plot_cols:\n",
+    "    fig = px.box(data_frame=df[plot_cols], x=col, color=df['price_retail'], title=f'BoxPlot for {col} Feature against the Target')\n",
+    "    fig.update_layout(xaxis_title=f'{col} Feature')\n",
+    "    fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "6. Missing value and outlier treatment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Any variation of data that is not applicable or any strange characters we will replace the data with null values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.replace(['NaN', 'N/A', 'NA', 'n/a', 'n.a.', 'N#A', 'n#a', '?'], 'other', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "df.isnull().sum()"
    ]
   },
   {
