--- a/notebooks/modeling.ipynb
+++ b/notebooks/modeling.ipynb
@@ -335,8 +335,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "df.isnull().sum()"
    ]
@@ -353,6 +355,56 @@
    "metadata": {},
    "source": [
     "8. Model building: part 1 (Apply Deep Learning classification algorithm without step 9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "import matplotlib.pyplot as plt\n",
+    "import mglearn\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.linear_model import Ridge\n",
+    "import numpy as np\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assuming Sales_df is your DataFrame and 'Sales' is the column to be imputed\n",
+    "Sales_df = df[['sales']]\n",
+    "\n",
+    "# Impute missing values using the mean strategy\n",
+    "imp_num = SimpleImputer(strategy='mean')\n",
+    "loan_df_imputed = pd.DataFrame(\n",
+    "    imp_num.fit_transform(Sales_df),  # Impute missing values\n",
+    "    columns=Sales_df.columns  # Keep the original column name\n",
+    ")\n",
+    "\n",
+    "# Assign the imputed values back to the original DataFrame\n",
+    "df['sales'] = loan_df_imputed['sales']\n",
+    "\n",
+    "\n",
+    "# check missing values in %age\n",
+    "missing_values = (\n",
+    "    df.isnull().sum()/len(df)*100\n",
+    ").astype(int)\n",
+    "\n",
+    "print(f'Column\\t\\t\\t% missing')\n",
+    "print(f'{\"-\"}'*35)\n",
+    "missing_values"
    ]
   },
   {
